landing page height bug fixed where image blocks text, also bug fix attempt for BlurredBG not showing after deployment on vercel

--- a/styles/Globals.css
+++ b/styles/Globals.css
@@ -70,7 +70,7 @@ input[type="number"] {
 }
 
 .landing-page {
-  background-image: url("../public/assets/BlurredBG.webp");
+  background-image: url("../images/BlurredBG.webp");
   background-size: cover;
   background-repeat: no-repeat;
 }
